--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Wed Feb 27 09:14:56 MST 2019
-sdk.dir=C\:\\Xiaomi\\Sdk
+#Wed Feb 20 10:41:31 MST 2019
+sdk.dir=C\:\\Users\\ChenTing Yu\\AppData\\Local\\Android\\Sdk
