Fixed compilation errors

--- a/local.properties
+++ b/local.properties
@@ -5,4 +5,5 @@
 # For customization when using a Version Control System, please read the
 # header note.
 #Wed Feb 20 10:41:31 MST 2019
-sdk.dir=C\:\\Users\\ChenTing Yu\\AppData\\Local\\Android\\Sdk
+sdk.dir=C\:\\Xiaomi\\Sdk
+ 
