--- a/build.gradle
+++ b/build.gradle
@@ -48,6 +48,7 @@ android {
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
+    //noinspection GradleCompatible
     implementation 'com.android.support:design:28.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     implementation 'com.squareup.picasso:picasso:2.4.0'
@@ -64,4 +65,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-analytics:16.3.0'
     implementation 'com.google.firebase:firebase-core:16.0.7'
     implementation 'com.google.code.gson:gson:2.8.5'
+//Maps key dependency
+    implementation 'com.google.android.gms:play-services:8.3.0'
+
 }
