The marker is working now with list

--- a/local.properties
+++ b/local.properties
@@ -5,4 +5,5 @@
 # For customization when using a Version Control System, please read the
 # header note.
 #Wed Mar 27 08:59:44 MDT 2019
-sdk.dir=D\:\\Xiaomi\\Sdk
+sdk.dir=C\:\\Xiaomi\\Sdk 
+
